# Todo_with_SQLAlchemy

./: .env.example  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  test.db  todo.db
alembic/: env.py
alembic/versions/: 34fccb83eee3_initial_migration.py  3fd411193971_add_user_id_to_todos.py  faa379c80b42_first.py
app/: main.py
app/api/v1/: auth.py  functions.py  todos.py
app/config/: security.py
app/core/: database.py
app/models/: todo.py  user.py
app/schemas/: auth.py  todo.py
app/services/repositories/: auth_repository.py  todo_repository.py
core/: database.py
tests/: conftest.py  test_auth.py  test_todos.py
